--- a/MyHome/app/src/main/res/layout/api.xml
+++ b/MyHome/app/src/main/res/layout/api.xml
@@ -24,7 +24,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="6dp"
-            android:text="The Profile Get API is called to get the user's profile information. This is normally an irrelevant call; we get the profile info directly from the Sign In API" />
+            android:text="The Profile Get API is called to get the user's profile information. This is normally an irrelevant call; we get the profile info directly from the Sign In API." />
 
         <android.support.v7.widget.SwitchCompat
             android:id="@+id/profile_get_switch"
@@ -186,7 +186,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="6dp"
-            android:text="The Sign In API is used to log into the app." />
+            android:text="The Sign In API is used to log into the app. It also gives us profile information so our dashboard can be populated faster." />
 
         <TextView
             android:layout_width="wrap_content"
@@ -283,7 +283,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="6dp"
-            android:text="The Register API is used to enroll the user for the app." />
+            android:text="The Register API is used to enroll the user for the app. This call is made right after accepting the Terms &amp; Conditions." />
 
         <android.support.v7.widget.SwitchCompat
             android:id="@+id/register_switch"
@@ -310,7 +310,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="6dp"
-            android:text="The Change Password API is used to change the user's password." />
+            android:text="The Change Password API is used to change the user's password. It can be found in the top right in Settings." />
 
         <android.support.v7.widget.SwitchCompat
             android:id="@+id/change_password_switch"
@@ -337,7 +337,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="6dp"
-            android:text="The Change Security Question API is used to change the user's security question." />
+            android:text="The Change Security Question API is used to change the user's security question. It can be found in the top right in Settings." />
 
         <android.support.v7.widget.SwitchCompat
             android:id="@+id/change_security_question_switch"
@@ -364,7 +364,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="6dp"
-            android:text="The Get Saved Doctors API is used to fetch the list of favorite providers of the users." />
+            android:text="The Get Saved Doctors API is used to fetch the list of favorite providers of the users. This is called on the FAD screen (and possibly the dashboard)." />
 
         <android.support.v7.widget.SwitchCompat
             android:id="@+id/get_saved_doctors_switch"
@@ -391,7 +391,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="6dp"
-            android:text="The Save Doctor API is used to favorite a provider." />
+            android:text="The Save Doctor API is used to favorite a provider. The heart may still change due to the call taking a few seconds." />
 
         <android.support.v7.widget.SwitchCompat
             android:id="@+id/save_doctor_switch"
@@ -418,7 +418,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="6dp"
-            android:text="The Delete Saved Doctor API is used to delete a favorite provider." />
+            android:text="The Delete Saved Doctor API is used to delete a favorite provider. The heart may still change due to the call taking a few seconds." />
 
         <android.support.v7.widget.SwitchCompat
             android:id="@+id/delete_saved_doctor_switch"
