--- a/MyHome/app/src/main/res/layout/book_dialog_personal.xml
+++ b/MyHome/app/src/main/res/layout/book_dialog_personal.xml
@@ -48,9 +48,11 @@
                 android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ- "
                 android:ellipsize="end"
                 android:hint="@string/first_name"
+                android:imeOptions="actionNext"
                 android:inputType="textCapWords"
                 android:maxLength="35"
-                android:maxLines="1" />
+                android:maxLines="1"
+                android:singleLine="true" />
 
         </android.support.design.widget.TextInputLayout>
 
@@ -69,9 +71,11 @@
                 android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ- "
                 android:ellipsize="end"
                 android:hint="@string/last_name"
+                android:imeOptions="actionNext"
                 android:inputType="textCapWords"
                 android:maxLength="35"
-                android:maxLines="1" />
+                android:maxLines="1"
+                android:singleLine="true" />
 
         </android.support.design.widget.TextInputLayout>
 
@@ -90,9 +94,11 @@
                 android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ- "
                 android:ellipsize="end"
                 android:hint="@string/preferred_name"
+                android:imeOptions="actionNext"
                 android:inputType="textCapWords"
                 android:maxLength="35"
-                android:maxLines="1" />
+                android:maxLines="1"
+                android:singleLine="true" />
 
         </android.support.design.widget.TextInputLayout>
 
@@ -186,9 +192,11 @@
                 android:digits="0123456789"
                 android:ellipsize="end"
                 android:hint="@string/date_of_birth"
+                android:imeOptions="actionNext"
                 android:inputType="number|phone"
                 android:maxLength="10"
-                android:maxLines="1" />
+                android:maxLines="1"
+                android:singleLine="true" />
 
         </android.support.design.widget.TextInputLayout>
 
@@ -206,8 +214,10 @@
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
                 android:hint="@string/address"
+                android:imeOptions="actionNext"
                 android:inputType="textCapWords"
-                android:maxLines="2" />
+                android:maxLines="2"
+                android:singleLine="true" />
 
         </android.support.design.widget.TextInputLayout>
 
@@ -225,8 +235,10 @@
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
                 android:hint="@string/address_2"
+                android:imeOptions="actionNext"
                 android:inputType="textCapWords"
-                android:maxLines="2" />
+                android:maxLines="2"
+                android:singleLine="true" />
 
         </android.support.design.widget.TextInputLayout>
 
@@ -251,8 +263,10 @@
                     android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ- "
                     android:ellipsize="end"
                     android:hint="@string/city"
+                    android:imeOptions="actionNext"
                     android:inputType="textCapWords"
-                    android:maxLines="2" />
+                    android:maxLines="2"
+                    android:singleLine="true" />
 
             </android.support.design.widget.TextInputLayout>
 
@@ -288,8 +302,10 @@
                     android:layout_height="wrap_content"
                     android:ellipsize="end"
                     android:hint="@string/zip"
+                    android:imeOptions="actionNext"
                     android:inputType="number"
-                    android:maxLength="5" />
+                    android:maxLength="5"
+                    android:singleLine="true" />
 
             </android.support.design.widget.TextInputLayout>
 
@@ -309,9 +325,11 @@
                     android:ellipsize="end"
                     android:ems="10"
                     android:hint="@string/phone_number"
+                    android:imeOptions="actionNext"
                     android:inputType="phone"
                     android:maxLength="12"
-                    android:maxLines="1" />
+                    android:maxLines="1"
+                    android:singleLine="true" />
 
             </android.support.design.widget.TextInputLayout>
         </LinearLayout>
@@ -329,7 +347,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/email"
-                android:inputType="textEmailAddress" />
+                android:imeOptions="actionNext"
+                android:inputType="textEmailAddress"
+                android:singleLine="true" />
 
         </android.support.design.widget.TextInputLayout>
 
@@ -384,7 +404,9 @@
                 android:layout_height="wrap_content"
                 android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ- "
                 android:hint="@string/translator_language"
-                android:inputType="textCapWords" />
+                android:imeOptions="actionNext"
+                android:inputType="textCapWords"
+                android:singleLine="true" />
 
         </android.support.design.widget.TextInputLayout>
 
@@ -438,8 +460,10 @@
                 android:layout_height="200dp"
                 android:background="@drawable/edit_text_boarder_grey"
                 android:gravity="left"
+                android:imeOptions="actionDone"
                 android:inputType="textCapSentences|textMultiLine"
-                android:maxLength="350" />
+                android:maxLength="350"
+                android:singleLine="true" />
 
         </android.support.design.widget.TextInputLayout>
 
