--- a/MyHome/app/src/main/res/layout/appointments_details.xml
+++ b/MyHome/app/src/main/res/layout/appointments_details.xml
@@ -31,7 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/date_header"
-            android:text="9:00am - 9:45am"
+            android:text="9:00am PST"
             android:textStyle="bold"
             tools:ignore="HardcodedText" />
 
