--- a/MyHome/app/src/main/res/layout/book_confirmation.xml
+++ b/MyHome/app/src/main/res/layout/book_confirmation.xml
@@ -29,7 +29,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
-            android:text="10:30am"
+            android:text="10:30am PST"
             tools:ignore="HardcodedText" />
 
         <TextView
